Fix filter label if no option selected: align center

--- a/src/components/Views/less/springisnow-volto-searchkit-block.less
+++ b/src/components/Views/less/springisnow-volto-searchkit-block.less
@@ -109,7 +109,7 @@
                 // width: 50%;
                 .ui.dropdown.fnfilter {
                     display: flex;
-                    align-items: flex-start;
+                    align-items: center;
                     justify-content: space-between;
                     font-family: @fontName;
                     font-size: 1rem;
